--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
-
 {
     "name": "cooperspeele/cp-uni-form-plugin",
     "type": "symfony1-plugin",
     "description": "",
-    "keywords": ["symfony"],
+    "keywords": ["symfony", "plugin"],
     "license": "MIT",
     "homepage": "https://github.com/cooperspeele/cpUniFormPlugin",
     "require": {
@@ -11,7 +10,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0-dev"
+            "dev-master": "1.0.x-dev"
         }
     }
 }
